# proje2048

./: CMakeLists.txt  README.md  main.cpp  oyun.cpp  oyun.hpp  tahta.cpp  tahta.hpp
output/: CMakeLists.txt  main.cpp
